Giraph Change Log

Release 1.0.1 - unreleased
  GIRAPH-645: Specify maven deploy plugin version (nitay)

  GIRAPH-643: Maven Release settings more friendly to Git (nitay)
  
Release 1.0.0 - 2013-04-15
  GIRAPH-633: Rename VertexEdges to OutEdges (apresta)

  GIRAPH-634: InternalGiraphRunner with TestGraph is broken (majakabiljo)

  GIRAPH-617: Website Documentation: Vertex/Edge Input/Output (apresta)

  GIRAPH-634: InternalGiraphRunner with TestGraph is broken (majakabiljo)

  GIRAPH-630: Convergence detection broken in
  o.a.g.examples.PageRankVertex. (ssc via aching)

  GIRAPH-627: YARN build profile is broken. (rvs via aching)

  GIRAPH-628: Can't build Giraph without git due to mavanagaiata not
  configured right (aching).

  GIRAPH-595: InternalVertexRunner.run() should take GiraphConfiguration, not GiraphClasses
  (nitay via apresta)

  GIRAPH-364: Clean up directories created by test suite (majakabiljo)

  GIRAPH-614: SplitMasterWorker=false is broken (majakabiljo)

  GIRAPH-616: Decouple vertices and edges in DiskBackedPartitionStore and avoid writing 
  back edges when the algorithm does not change topology. (claudio)

  GIRAPH-613: Remove Writable from the interfaces implemented by Vertex (claudio)

  GIRAPH-543: Fix PageRankBenchmark and make WeightedPageRankBenchmark (majakabiljo)

  GIRAPH-615: Add support for multithreaded output (majakabiljo)

  GIRAPH-612: Improve website for upcoming release (aching)

  GIRAPH-527: readVertexInputSplit is always reporting 0 vertices and 0 edges (nitay)

  GIRAPH-611: Vertex/EdgeReaderWrapper should configure inner reader (majakabiljo)

  GIRAPH-609: More information on runtime exceptions for Callables (aching)

  GIRAPH-607: Hive IO bump (nitay)

  GIRAPH-564: Input/output formats and readers/writers should implement
  ImmutableClassesGiraphConfigurable (aching)

  GIRAPH-604: Clean up benchmarks (majakabiljo)

  GIRAPH-605: Worker crashes if its vertices have no edges when using edge input (majakabiljo)
