@@ -20,13 +20,14 @@ package org.apache.giraph.edge;
 
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.UnmodifiableIterator;
+
+import org.apache.giraph.utils.EdgeIterables;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 
 import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
-import java.util.Collection;
 import java.util.Iterator;
 import java.util.Map;
 
@@ -47,16 +48,7 @@ public class HashMultimapEdges<I extends WritableComparable, E extends Writable>
 
   @Override
   public void initialize(Iterable<Edge<I, E>> edges) {
-    // If the iterable is actually a collection, we can cheaply get the
-    // size and initialize the hash-multimap with the expected capacity.
-    if (edges instanceof Collection) {
-      initialize(((Collection<Edge<I, E>>) edges).size());
-    } else {
-      initialize();
-    }
-    for (Edge<I, E> edge : edges) {
-      add(edge);
-    }
+    EdgeIterables.initialize(this, edges);
   }
 
   /**
