@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.0.1 - unreleased
+  GIRAPH-636: Initialize compute OutEdges directly from input OutEdges
+  (majakabiljo)
+
   GIRAPH-645: Specify maven deploy plugin version (nitay)
 
   GIRAPH-643: Maven Release settings more friendly to Git (nitay)
